src/objects/Option__c.object
<CustomObject>
    <fields>
        <fullName>Option_Text__c</fullName>
        <label>Option Text</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Techincal_Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Technical Question</label>
        <referenceTo>Technical_Question__c</referenceTo>
        <relationshipLabel>Option</relationshipLabel>
        <relationshipName>Option</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>anwser__c</fullName>
        <label>Answer</label>
        <picklist>
            <picklistValues>
                <fullName>Correct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect</fullName>
                <default>true</default>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Option</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Option Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Option</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>